Fix z-index

--- a/Care/wwwroot/css/site.css
+++ b/Care/wwwroot/css/site.css
@@ -9,9 +9,9 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-    color: #0366d6;
+    z-index: 999;
+    color: black;
 }
-
 
 .animation_bg {
     height: 100%;
@@ -21,7 +21,6 @@ a {
 
 .animation_overflow {
     position: absolute;
-    z-index: 1;
     width: 100%;
     height: 100%;
     opacity: 1;
@@ -100,8 +99,14 @@ a {
 }
 
 .info-line {
-    display: block;
+    display: inline-block;
     margin-left: 6.4%;
+}
+
+.image-circle {
+    height: 35px;
+    width: 100px;
+    background-image: url('../Images/circle.png');
 }
 
 .btn-primary {
